Map fixes on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -242,12 +242,6 @@ main .canvas .map {
 }
 
 .no-select {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     cursor: move;
     cursor: -moz-grab;
     cursor: -webkit-grab;
@@ -450,7 +444,14 @@ footer .copyright .item a {
 
 /* Larger than tablet */
 @media (min-width: 750px) {
-	
+	.no-select {
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-khtml-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+	}
 }
 
 /* Larger than desktop */
